# Multimedia_Project_Mosaic_Photo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  uv.toml
.github/workflows/: ci.yml
src/mosaic/: __init__.py  cli.py  compose.py  convert.py  core.py  matching.py  tiles.py
tests/: test_cli.py  test_compose.py  test_convert.py  test_core.py  test_matching.py  test_tiles.py
